fix(styles): corrected menu z-index overflow over schedule

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -94,7 +94,7 @@ nav .nav-toggle-wrapper .close-label {
   overflow: hidden;
   background-color: var(--base-400);
   color: var(--base-100);
-  z-index: 1;
+  z-index: 998;
   will-change: clip-path;
   clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
 }
